--- a/package.json
+++ b/package.json
@@ -1,25 +1,21 @@
 {
   "name": "ivshalin.com",
   "version": "0.0.1",
-  "main": "_site/index.html",
-  "description": "Ivan Shalin personal blog",
+  "homepage": "https://ivshalin.com/",
+  "private": true,
   "scripts": {
     "build": "eleventy",
-    "build-production": "ELEVENTY_PRODUCTION=true eleventy"
+    "build-production": "ELEVENTY_PRODUCTION=true eleventy",
+    "serve": "npx @11ty/eleventy --serve"
   },
   "keywords": [],
   "author": {
     "name": "Ivan Shalin",
     "email": "shalin.ivan@gmail.com",
-    "url": "https://ivshalin.com"
+    "url": "https://ivshalin.com/"
   },
   "license": "MIT",
   "devDependencies": {
-    "@11ty/eleventy": "^0.10.0",
-    "@11ty/eleventy-plugin-inclusive-language": "^1.0.0",
-    "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.1",
-    "@mightyplow/eleventy-plugin-cache-buster": "^1.1.3",
-    "clean-css": "^4.2.3",
-    "html-minifier": "^4.0.0"
+    "@11ty/eleventy": "0.12.1"
   }
 }
